Fix aligning elements and h1 resizing

--- a/app/about/about.css
+++ b/app/about/about.css
@@ -3,7 +3,7 @@
   justify-content: center;
 }
 .headline-about > h1 {
-  font-size: 3.5rem;
+  font-size: 3rem;
 }
 
 .about-container {
