--- a/app/cart/cart.css
+++ b/app/cart/cart.css
@@ -1,6 +1,12 @@
 .headline-cart {
   display: flex;
   justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.headline-cart > h1 {
+  font-size: 3rem;
 }
 
 .cart-container {
